--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <link rel="icon" href="" type="image/x-icon">
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900"
       rel="stylesheet"
@@ -456,7 +456,7 @@
                 <span class="icon-globe"></span>
               </div>
               <h3 class="mb-4">Website</h3>
-              <p><a href="#">yoursite.com</a></p>
+              <p><a href="https://chioma-ejeagwu.netlify.app/">chiomaejeagwu.com</a></p>
             </div>
           </div>
         </div>
