--- a/index.html
+++ b/index.html
@@ -134,11 +134,7 @@
                   A self-motivated frontend developer that creates and maintains
                   a better code base for reusability. Ability to collaborate
                   with senior developers while spending extra time to be
-                  mentored. I enjoy working close with team members to ensure
-                  workloads are effectively managed and picking up the slack
-                  when necessary. With a passion for both personal growth and
-                  software development, I attended boot camps to learn new
-                  languages while sharpening existing skills
+                  mentored. I am seeking a position in a growth-oriented company where I can use my skills to the advantage of the company while having the scope to develop my skills.. 
                 </p>
                 <ul class="about-info mt-4 px-md-0 px-2">
                   <li class="d-flex">
@@ -187,15 +183,14 @@
               <span class="position">Polaris Bank Limited </span>
               <p class="mt-4">
                 <ul>
-                  <li>Designed user-friendly software to improve accessibility and responsiveness.</li>
                   <li>Reviewed proposed UI and UX designs for technical feasibility by collaborating with
                     back-end development personnel.</li>
-                  <li>Checked web pages for compatibility with the browsers, devices and operating
-                    systems commonly used by customers.</li>
-                  <li>Improved coding of JavaScript and CSS to enhance user experience and
-                    functionality.</li>
-                  <li>Produced code in programming languages such as JavaScript and Typescript to
-                    create the most effective and clean websites.</li>
+                  <li>Responsible for development of new highly-responsive, web-based user interface</li>
+                  <li>Maintain existing Angular systems, including fixing bugs, working with other JavaScript developers and software engineers to develop well-structured and flexible front-end architecture, along with the APIs to support it.</li>
+                  <li>Develop new custom components to meet project requirements.</li>
+                  <li>Maintain and update project dependencies as well as fix any conflicts.</li>
+                  <li>Construct visualizations that are able to depict vast amounts of data.</li>
+                  <li>Work and collaborate with the rest of the engineering team.</li>
                 </ul>
               </p>
             </div>
