--- a/index.html
+++ b/index.html
@@ -183,30 +183,13 @@
               <span class="position">Polaris Bank Limited </span>
               <p class="mt-4">
                 <ul>
-                  <li>Reviewed proposed UI and UX designs for technical feasibility by collaborating with
-                    back-end development personnel.</li>
-                  <li>Responsible for development of new highly-responsive, web-based user interface</li>
-                  <li>Maintain existing Angular systems, including fixing bugs, working with other JavaScript developers and software engineers to develop well-structured and flexible front-end architecture, along with the APIs to support it.</li>
-                  <li>Develop new custom components to meet project requirements.</li>
-                  <li>Maintain and update project dependencies as well as fix any conflicts.</li>
-                  <li>Construct visualizations that are able to depict vast amounts of data.</li>
-                  <li>Work and collaborate with the rest of the engineering team.</li>
-                </ul>
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="resume-wrap ftco-animate">
-              <span class="date">September 2021 - May 2022</span>
-              <h2>Frontend Developer Intern</h2>
-              <span class="position">Digital Dreams Limited </span>
-              <p class="mt-4">
-                <ul>
-                  <li>Worked with a team of 8 software developers and provided end-to-end solutions for over 25 clients</li>
-                  <li>Collaborated with teammates and updated application versions using Git</li>
-                  <li>Used best practices in HTML and CSS to develop a static site based from a static image of a website design</li>
-                  <li>Performed daily operations and maintenance tasks to ensure 40 web pages under Digital Dreams are up-to-date and free of errors</li>
-                  <li>Developed cross-browser/platform HTML5, CSS and JavaScript to match design specs for complex page layouts while adhering to code standards</li>
+                  <li>Reviewed proposed UI and UX designs for technical feasibility by collaborating with back-end development personnels.</li>
+                  <li> Led the development of a new, highly-responsive, web-based user interface for a cutting-edge payment platform, resulting in a 20% increase in user engagement and a 15% improvement in transaction processing speed</li>
+                  <li> Played a key role in maintaining and enhancing existing Angular systems, addressing 50+ bugs, and collaborating with JavaScript developers and software engineers to fortify the front-end architecture. Implemented APIs that facilitated a 30% increase in system scalability and flexibility.</li>
+                  <li> Developed over 10+ bespoke components to meet the specific project requirements of the payment platform, adapting to the unique challenges posed by handling a large volume of transactions and diverse data sets.</li>
+                  <li> Proactively managed and updated project dependencies, resolving 20+ conflicts and ensuring the seamless integration of new features and improvements into the payment platform</li>
+                  <li> Constructed data visualizations capable of effectively presenting vast amounts of transactional data, facilitating insights and decision-making for stakeholders. These visualizations led to a 25% improvement in data interpretation by end-users</li>
+                  <li> Collaborated closely with the engineering team throughout the development lifecycle, resulting in a 30% reduction in time-to-market for new features and enhancements.</li>
                 </ul>
               </p>
             </div>
