--- a/index.html
+++ b/index.html
@@ -84,12 +84,7 @@
               class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
               data-scrollax-parent="true"
             >
-              <div
-                class="one-third js-fullheight order-md-last img"
-                style="background-image: url(images/BImage-3.png)"
-              >
-                <div class="overlay"></div>
-              </div>
+              
               <div
                 class="one-forth d-flex align-items-center ftco-animate"
                 data-scrollax=" properties: { translateY: '70%' }"
@@ -121,7 +116,7 @@
               <div class="overlay"></div>
               <div
                 class="img d-flex align-self-stretch align-items-center"
-                style="background-image: url(images/BImage-2.png)"
+                style="background-image: url(images/BImage-2.png(copy))"
               ></div>
             </div>
           </div>
